Added emails/Transponder snails

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
                 <p id="firstName" class="mt-5">First Name</p>
                 <p id="lastName" class="">Last Name</p>
+                <p id="email" class="">Transponder Snail Link</p>
+                <p id="slackEmail" class="">Other Transponder Link</p>
 
                 <div>
                     <button id="summonPirate" type="button" class="btn btn-secondary">Get Crew Member</button>
