Finished styling and checked

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="container mt-5">
+    <div class="mt-5 ms-5 text-font">
         <div class="row d-flex align-items-center">
             <div class="col">
                 <h1>Pirate Crew Generator</h1>
@@ -26,9 +26,10 @@
 
                 <div>
                     <button id="summonPirate" type="button" class="btn btn-secondary">Get Crew Member</button>
+                    <div id="elementHere"></div>
                 </div>
 
-                <ul id="displayList" class="mt-5"></ul>
+                <ul id="displayList" class=""></ul>
             </div>
         </div>
     </div>
